--- a/gobarber-web/package.json
+++ b/gobarber-web/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "@unform/core": "^2.1.0",
     "@unform/web": "^2.1.0",
+    "axios": "^0.19.2",
     "polished": "^3.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -44,9 +45,9 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.0",
+    "@types/yup": "^0.28.0",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
-    "@types/yup": "^0.28.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
