--- a/gobarber-app/android/app/build.gradle
+++ b/gobarber-app/android/app/build.gradle
@@ -129,7 +129,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.appgobarber"
+        applicationId "com.gobarberapp"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
