--- a/gobarber-app/ios/Podfile
+++ b/gobarber-app/ios/Podfile
@@ -44,8 +44,8 @@ def flipper_post_install(installer)
   end
 end
 
-target 'appgobarber' do
-  # Pods for appgobarber
+target 'gobarberapp' do
+  # Pods for gobarberapp
   pod 'FBLazyVector', :path => "../node_modules/react-native/Libraries/FBLazyVector"
   pod 'FBReactNativeSpec', :path => "../node_modules/react-native/Libraries/FBReactNativeSpec"
   pod 'RCTRequired', :path => "../node_modules/react-native/Libraries/RCTRequired"
@@ -77,7 +77,7 @@ target 'appgobarber' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
-  target 'appgobarberTests' do
+  target 'gobarberappTests' do
     inherit! :complete
     # Pods for testing
   end
@@ -94,10 +94,10 @@ target 'appgobarber' do
   end
 end
 
-target 'appgobarber-tvOS' do
-  # Pods for appgobarber-tvOS
+target 'gobarberapp-tvOS' do
+  # Pods for gobarberapp-tvOS
 
-  target 'appgobarber-tvOSTests' do
+  target 'gobarberapp-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
