update form signin and signout

--- a/gobarber-app/.eslintrc.json
+++ b/gobarber-app/.eslintrc.json
@@ -24,6 +24,8 @@
   "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
   "rules": {
     "react/prop-types": "off",
+    "no-unused-expressions": "off",
+    "no-return-assign": "off",
     "no-nested-ternary": "off",
     "no-param-reassign": "off",
     "react/jsx-props-no-spreading": "off",
