--- a/gobarber-app/.eslintrc.json
+++ b/gobarber-app/.eslintrc.json
@@ -23,6 +23,7 @@
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
   "rules": {
+    "no-shadow": "off",
     "react/prop-types": "off",
     "no-unused-expressions": "off",
     "no-return-assign": "off",
