--- a/gobarber-backend/ormconfig.json
+++ b/gobarber-backend/ormconfig.json
@@ -1,4 +1,5 @@
-{
+[{
+  "name": "default",
   "type": "postgres",
   "host": "localhost",
   "port": 5432,
@@ -14,4 +15,15 @@
   "cli": {
     "migrationsDir": "./src/shared/infra/typeorm/migrations/*.ts"
   }
-}
+},
+{
+  "name": "mongo",
+  "type": "mongodb",
+  "host": "localhost",
+  "port": 27017,
+  "database": "gostack_gobarber",
+  "useUnifiedTopology": true,
+  "entities": [
+    "./src/modules/**/infra/typeorm/schemas/*.ts"
+  ]
+}]
