--- a/gobarber-backend/.env
+++ b/gobarber-backend/.env
@@ -1,5 +1,6 @@
 APP_SECRET=gobarber
-APP_API_URL=http://localhost:3333
+# APP_API_URL=http://localhost:3333
+APP_API_URL=http://192.168.1.68:3333
 APP_WEB_URL=http://localhost:3000
 
 REDIS_HOST=localhost
